tests/error/array_errors/copy_after_move.err
Error: Copy violation (at $FILE:9:8)
  | 
7 |    xs = array(1, 2, 3)
8 |    ys = xs
9 |    zs = xs.copy()
  |         ^^ Variable `xs` with non-copyable type `array[int, 3]` cannot
  |            be borrowed ...
  | 
8 |    ys = xs
  |         -- since it was already moved here

Help: Consider copying `xs` instead of moving it: `xs.copy()`

Guppy compilation failed due to 1 previous error
